# Allocators

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  stack_allocator.cpp  stack_allocator.hpp
.github/workflows/: cmake.yml  tests.yml
allocators/: CMakeLists.txt
allocators/pointer_arithmetic/: pointer_arithmetic.cpp  pointer_arithmetic.hpp
allocators/pointer_math/: pointer_math.cpp  pointer_math.hpp
allocators/pool_allocator/: pool_allocator.cpp  pool_allocator.hpp
allocators/stack_allocator/: stack_allocator.cpp  stack_allocator.hpp
cmake/: ClangFormat.cmake  ClangTidy.cmake
include/: pool_allocator.hpp  stack_allocator.hpp  stl_allocator.hpp
src/: pool_allocator.cpp  stack_allocator.cpp
tests/: CMakeLists.txt  pointer_arithmetic_tests.cpp  pool_allocator_tests.cpp  stack_allocator_tests.cpp
tests/stack_allocator_tests/: stack_allocator_tests.cpp  tests.cpp
